Assets : Updated icons & resources UI     : Made all basic cards readable          Added special tiles icons on cards          Fixed corps not showinf effect text          Updated Draw, Discard & Oceans counter          Added Generation counter

--- a/src/css/Card.scss
+++ b/src/css/Card.scss
@@ -174,6 +174,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-shadow: #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px, #fff 0px 0px 2px;
+  font-family: 'Prototype';
 }
 
 
@@ -471,6 +473,10 @@ display: none;
   align-items: center;
   padding-right: calc(var(--card-width) * 0.01);
 
+
+}
+
+.prereq_content {
   .token_img {
     margin-right:0;
   }
