--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -48,15 +48,15 @@
 }
 
 #decks_area > * {
-  display: inline-block;
+/*  display: inline-block;*/
 }
 
 #decks_area {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: 5%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  height: 10%;
   position: absolute;
   top: 0%;
   width: 22%;
@@ -68,13 +68,18 @@
 }
 
 #oceans_pile {
-  position: relative;
+  position: absolute;
   clip-path: revert;
   width: calc(var(--stan-width) * 0.309);
   height: calc(var(--stan-width) * 0.35);
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #oceans_pile #tracker_w {
+  /*
   position: absolute;
   top: -11%;
   left: -30%;
@@ -88,7 +93,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  padding: 1%;
+  padding: 1%;*/
+  font-size: calc(var(--stan-width) * 0.2);
+  color: gold;
+  font-family: 'Prototype';
 }
 
 /** Temp markers */
@@ -129,13 +137,13 @@
 
 /* decks */
 #decks_area .card {
+  /*
   width: calc(var(--stan-width) * 0.3);
   height: calc(var(--stan-width) * 0.31);
-  /* border: black solid 1px;
-  border-radius: 5%;
-  box-shadow: 2px 2px 3px 1px #00000080;
-  margin-bottom:calc(var(--stan-height) * 0.1); ;*/
-  font-size: calc(var(--stan-width) * 0.07);
+
+  font-size: calc(var(--stan-width) * 0.07);*/
+  width:0;
+  height:0;
 }
 #decks_area .milestone,
 #decks_area .award {
@@ -143,17 +151,43 @@
   height: calc(var(--stan-width) * 0.5);
 }
 
+
 #deck_main {
+  /*
   background-image: url("img/resources.png");
   background-size: 1000% 200%;
   background-position: 0 -100%;
   background-color: grey;
+
+   */
 }
+
+.deck_line {
+
+  color: white;
+  font-family: "Prototype";
+  display: flex;
+  width: fit-content;
+
+  .deck_line_text{
+    margin-right:3%;
+  }
+  .counter {
+    position: relative;
+    margin-left: 10px;
+  }
+
+  .infobox {
+    display: none;
+  }
+}
+
 #discard_main {
   background-color: ghostwhite;
 }
 
 .carddeck .counter {
+  /*
   position: absolute;
   top: -18%;
   left: -30%;
@@ -167,6 +201,9 @@
   align-items: center;
   border-radius: 50%;
   padding: 1%;
+
+   */
+  position: relative;
 }
 
 /** hide cards in discard */
