--- a/src/css/PlayerBoard.scss
+++ b/src/css/PlayerBoard.scss
@@ -193,7 +193,18 @@
   .tracker.tracker_forest{ background-position: -300% -100%;}
   .tracker.tracker_land{ background-position: -200% -100%;}
 
-  .tracker_tagVenus{
+.tracker.tile_8 {background-position: -400% -100%;}
+.tracker.tile_85 {background-position: -700% -100%;}
+.tracker.tile_128 {background-position: -900% -100%;}
+.tracker.tile_123 {background-position: -1300% -100%;}
+.tracker.tile_140 {background-position: -1000% -100%;}
+.tracker.tile_142 {background-position: -1100% -100%;}
+.tracker.tile_natural {background-position: -500% -100%;}
+.tracker.tile_97 {background-position: -800% -100%;}
+.tracker.tile_199 {background-position: -1200% -100%;}
+
+
+.tracker_tagVenus{
     display: none;
   }
 
